# Codroid

./: .eslintrc.js  .gitmodules  README.md  README_zh.md  components.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
src/: App.vue  CreateProjectView.vue  HomeView.vue  OpenProjectView.vue  ProjectView.vue  bindings.ts  colors.css  main.ts  type.ts
src-tauri/: .gitattributes  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: desktop.json  main.json  mobile.json
src-tauri/res/: .gitattributes  README.md  proot  test.txt
src-tauri/res/android/: .gitattributes
src-tauri/res/sources/: README.md
src-tauri/res/windows/: .gitattributes
src-tauri/sidecar/: README.md  rust-analyzer-aarch64-linux-android  rust-analyzer-x86_64-linux-android  rust-analyzer-x86_64-unknown-linux-gnu
src-tauri/sidecar/sources/: README.md  build.py
src-tauri/src/: android.rs  lib.rs  main.rs  path_resolver.rs  payload.rs  proot.rs  res.rs  setup_process.rs
src-tauri/src/project_manager/: command.rs  mod.rs  project_info.rs
src-tauri/src/settings_manager/: command.rs  mod.rs  settings_item.rs
src/components/: CodeEditor.vue  PlaceHolderPage.vue  ProjectCard.vue  codemirrorTheme.ts
src/components/chips/: EmptyChip.vue  RustChip.vue
src/components/layout/: Spacer.vue
src/stores/: appGlobal.ts  projectInfoGlobal.ts
