[package]
name = "codroid"
version = "0.1.0"
description = "A Tauri App"
authors = ["shadow3aaa@qq.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codroid_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8.4.0", features = [
    "include-exclude",
    "debug-embed",
    "compression",
] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
libc = "0.2.155"
bincode = "1.3.3"
tar = "0.4.41"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
xz2 = "0.1.7"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
