[package]
name = "codroid"
version = "0.1.0"
description = "A Tauri App"
authors = ["shadow3aaa@qq.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codroid_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "=2.0.0-beta.22", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-android-utils = { git = "https://github.com/shadow3aaa/tauri-plugin-android-utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8.4.0", features = [
    "include-exclude",
    "debug-embed",
] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
tar = "0.4.41"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
xz2 = "0.1.7"
tauri-plugin-log = "2.0.0-beta.6"
log = "0.4.21"
symlink = "0.1.0"
notify = "6.1.1"
parking_lot = "0.12.3"
toml = "0.8.14"
specta = "=2.0.0-rc.12"
tauri-specta = { version = "=2.0.0-rc.11", features = [
    "javascript",
    "typescript",
] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
